refactor: initialize DataTable in tables.html and simplify SQL query in account.php

--- a/example/tables.html
+++ b/example/tables.html
@@ -920,6 +920,12 @@
     <!-- Page level custom scripts -->
     <script src="../assets/js/demo/datatables-demo.js"></script>
 
+    <script>
+        $(document).ready(function(){
+            $('#dataTable').DataTable();
+        });
+    </script>
+
 </body>
 
 </html>
